bin_PROGRAMS = zigbee-terminal-gtk

zigbee_terminal_gtk_SOURCES = zigbee_terminal_gtk.cpp ZigBeeTerminal.cpp PortConfig.cpp SerialInterface.cpp alphanum.cpp ZigBeePacket.cpp ZigBeePacketBuilder.cpp
zigbee_terminal_gtk_CXXFLAGS = $(DEPS_CFLAGS)
zigbee_terminal_gtk_LDADD = $(DEPS_LIBS)

#xmldir = $(datadir)
#xml_DATA = 

